# bgi

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.dist.yaml  debug_test.rs  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
examples/: batch_test.rs  bgi_device_modes.rs  bgi_example.rs  compatibility.rs  debug_backend_integration.rs  debug_window.rs  input_debug.rs  interactive_demo.rs  mandelbrot.rs  mandelbrot_batched.rs  minimal_demo.rs  simple.rs  test_backend.rs  window_test.rs
specs/001-implement-the-bgi/: contract_tests.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-implement-the-bgi/contracts/: drawing_primitives.md  fill_and_color.md  filled_shapes.md  graphics_init.md  image_operations.md  input_interaction.md  mouse_extensions.md  palette_color.md  text_rendering.md  viewport_coordinate.md
specs/002-add-inputs-and/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-inputs-and/contracts/: backend-api.md
src/: color.rs  constants.rs  context.rs  drawing.rs  drawing_state.rs  error.rs  fill.rs  font.rs  font_settings.rs  graphics.rs  image.rs  input.rs  input_event.rs  lib.rs  line.rs  optimizations.rs  palette.rs  shapes.rs  types.rs  types_backup.rs  types_final.rs  types_fixed.rs  types_old.rs  viewport.rs  window.rs  window_state.rs
src/backend/: minifb.rs  mod.rs  pixel_buffer.rs  winit.rs  winit_new.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
tests/: test_backend.rs  test_bit_pattern.rs  test_color_fill.rs  test_drawing_algorithms.rs  test_drawing_primitives.rs  test_error_handling.rs  test_fill_color.rs  test_filled_shapes.rs  test_graphics_init.rs  test_image_operations.rs  test_input_handling.rs  test_interactive.rs  test_line_patterns.rs  test_mouse_extensions.rs  test_new_backend_trait.rs.disabled  test_new_event_queue.rs.disabled  test_new_keyboard.rs.disabled  test_optimizations.rs  test_palette_color.rs  test_performance.rs  test_pixel_buffer_validation.rs  test_readme_validation.rs  test_simple_drawing.rs  test_standalone_pixel_buffer.rs  test_text_font.rs  test_text_rendering.rs  test_unit.rs  test_viewport_clipping.rs  test_viewport_coordinate.rs
tests/backend/: test_minifb_backend.rs  test_pgm_backend.rs
tests/graphics/: test_fonts.rs  test_state.rs
tests/input/: test_mouse.rs
tests/integration/: test_backend_selection.rs  test_coordinates.rs  test_visual_output.rs
tests/unit/: mod.rs  test_backend.rs  test_color.rs  test_drawing_state.rs  test_font_settings.rs  test_input_event.rs  test_viewport.rs  test_window_state.rs
