[package]
name = "bgi"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A modern Rust port of the Borland Graphics Interface (BGI) with extensible backends"
repository = "https://github.com/yourusername/bgi"
documentation = "https://docs.rs/bgi"
readme = "README.md"
keywords = ["graphics", "bgi", "drawing", "retrocomputing", "game-development"]
categories = ["graphics", "multimedia", "game-development"]

[features]
default = []
winit-backend = ["winit", "pixels"]
visual-backend = ["minifb"]
pgm-backend = []

[dependencies]
# Core dependencies
thiserror = "1.0"
bitflags = "2.4"

# Visual backend dependencies
minifb = { version = "0.25", optional = true }

# Font rendering dependency
bgi-stroked-fonts = "0.1"

# Winit backend dependencies (legacy)
winit = { version = "0.29", optional = true }
pixels = { version = "0.13", optional = true }

[dev-dependencies]
# For examples and tests
env_logger = "0.11"
rand = "0.8"

# Examples will be added later
# [[example]]
# name = "simple"
# path = "examples/simple.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
